panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__generic__test_assignment_to_generic.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/generic/test_assignment_to_generic.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_assignment_to_generic.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration value~2 `int` 27)
         (expression
            (assign
               (generic
                  123
                  (assoc `int` (name value~2 `int`))
                  (assoc `short` 123))
               42))
         (return (name value~2 `int`)))))

----- stderr -----
