panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__generic__test_default_is_chosen_if_no_match.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/generic/test_default_is_chosen_if_no_match.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_default_is_chosen_if_no_match.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration c~2 `char` 0)
         (return
            (generic
               (name c~2 `char`)
               (assoc `int` 1)
               (assoc `long` 2)
               (assoc default 42))))))

----- stderr -----
