panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__generic__test_default_is_not_chosen_even_if_it_is_first.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/generic/test_default_is_not_chosen_even_if_it_is_first.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_default_is_not_chosen_even_if_it_is_first.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return
            (generic
               123
               (assoc default 1)
               (assoc `long` 2)
               (assoc `unsigned int` 3)
               (assoc `char` 4)
               (assoc `int` 5))))))

----- stderr -----
