panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__generic__test_functions_match_function_ptr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/generic/test_functions_match_function_ptr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return
            (generic
               (name main~0 `fn() -> int`)
               (assoc `ptr<fn() -> int>` 27))))))

----- stderr -----
