panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__generic__test_type_compatibility.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/generic/test_type_compatibility.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_type_compatibility.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (enum E1~1
      (enumerators ∅
         (enumerator A~2 `enum E1~1`.0 ∅)
         (enumerator B~3 `enum E1~1`.1 ∅)
         (enumerator C~4 `enum E1~1`.2 ∅)))
   (enum E2~5
      (enumerators ∅
         (enumerator D~6 `enum E2~5`.0 ∅)
         (enumerator E~7 `enum E2~5`.1 ∅)
         (enumerator F~8 `enum E2~5`.2 ∅)))
   (function-definition
      f~9 `fn(e: enum E1~1 complete) -> int`
      (params
         e~11 `enum E1~1 complete`)
      (compound-statement
         (return (name e~11 `enum E1~1 complete`))))
   (declaration g~12 `fn() -> enum E1~1 complete` ∅)
   (function-definition
      main~13 `fn() -> int`
      (compound-statement
         (declaration x~15 `enum E1~1 complete` (enumerator A~2 `enum E1~1 complete`.0 ∅))
         (declaration y~16 `enum E2~5 complete` (enumerator D~6 `enum E2~5 complete`.0 ∅))
         (expression
            (generic
               (name x~15 `enum E1~1 complete`)
               (assoc `enum E1~1 complete` 0)))
         (expression
            (generic
               (name x~15 `enum E1~1 complete`)
               (assoc `unsigned int` 0)))
         (expression
            (generic
               (name y~16 `enum E2~5 complete`)
               (assoc `enum E2~5 complete` 0)))
         (expression
            (generic
               (name y~16 `enum E2~5 complete`)
               (assoc `unsigned int` 0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (generic
                  (name f~9 `fn(e: enum E1~1 complete) -> int`)
                  (assoc `ptr<typeof(`fn(∅: unsigned int) -> int`)>` 42))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (generic
                  (name g~12 `fn() -> enum E1~1 complete`)
                  (assoc `ptr<typeof(`fn() -> unsigned int`)>` 27))))
         (return
            (add
               (generic
                  (name x~15 `enum E1~1 complete`)
                  (assoc `enum E1~1 complete` 0)
                  (assoc `enum E2~5 complete` 1))
               (generic
                  (name y~16 `enum E2~5 complete`)
                  (assoc `enum E1~1 complete` 1)
                  (assoc `enum E2~5 complete` 0)))))))

----- stderr -----
