panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__generic__test_unevaluated_assocs_are_not_type_checked.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/generic/test_unevaluated_assocs_are_not_type_checked.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition a~1 `int` 42)
         (definition p~2 `ptr<int>` (addressof (name a~1 `int`)))
         (return
            (generic
               (name main~0 `fn() -> int`)
               (assoc `int` (multiply (name p~2 `ptr<int>`) 2))
               (assoc default 42))))))

----- stderr -----
